crates/core-executor/src/tests/snapshots/query_show_tables_starts_with.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW TABLES STARTS WITH 'dep'\""
snapshot_kind: text
---
Ok(
    [
        "+------------+------------------+-------+---------------+-------------+",
        "| created_on | name             | kind  | database_name | schema_name |",
        "+------------+------------------+-------+---------------+-------------+",
        "|            | department_table | TABLE | embucket      | public      |",
        "|            | departments      | TABLE | embucket      | public      |",
        "+------------+------------------+-------+---------------+-------------+",
    ],
)
