crates/core-executor/src/tests/snapshots/query_show_variables_multiple.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW VARIABLES\""
snapshot_kind: text
---
Ok(
    [
        "+------------+------------+-------------------+--------+------+------------------+",
        "| created_on | updated_on | name              | value  | type | comment          |",
        "+------------+------------+-------------------+--------+------+------------------+",
        "|            |            | session_params.v1 | 'test' |      | session variable |",
        "|            |            | session_params.v2 | 1      |      | session variable |",
        "|            |            | session_params.v3 | true   |      | session variable |",
        "+------------+------------+-------------------+--------+------+------------------+",
    ],
)
