crates/core-executor/src/tests/snapshots/query_show_views_in_schema_and_prefix.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW VIEWS IN information_schema STARTS WITH 'schem'\""
snapshot_kind: text
---
Ok(
    [
        "+------------+----------+------+---------------+--------------------+",
        "| created_on | name     | kind | database_name | schema_name        |",
        "+------------+----------+------+---------------+--------------------+",
        "|            | schemata | VIEW | embucket      | information_schema |",
        "+------------+----------+------+---------------+--------------------+",
    ],
)
