crates/core-executor/src/tests/snapshots/query_timestamp_date.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT TO_TIMESTAMP('2022-01-01 11:30:00'::date)\""
---
Ok(
    [
        "+-------------------------------------------+",
        "| to_timestamp(Utf8(\"2022-01-01 11:30:00\")) |",
        "+-------------------------------------------+",
        "| 2022-01-01T00:00:00                       |",
        "+-------------------------------------------+",
    ],
)
