crates/core-executor/src/tests/snapshots/query_timestamp_scale.snap
---
source: crates/core-executor/src/tests/query.rs
description: "r#\"SELECT\n       TO_TIMESTAMP(1000000000, 0) AS \"Scale in seconds\",\n       TO_TIMESTAMP(1000000000, 3) AS \"Scale in milliseconds\",\n       TO_TIMESTAMP(1000000000, 6) AS \"Scale in microseconds\",\n       TO_TIMESTAMP(1000000000, 9) AS \"Scale in nanoseconds\";\"#"
---
Ok(
    [
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| Scale in seconds    | Scale in milliseconds | Scale in microseconds | Scale in nanoseconds |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| 2001-09-09T01:46:40 | 1970-01-12T13:46:40   | 1970-01-01T00:16:40   | 1970-01-01T00:00:01  |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
    ],
)
