crates/core-executor/src/tests/snapshots/query_timestamp_scale_decimal_scaled.snap
---
source: crates/core-executor/src/tests/query.rs
description: "r#\"SELECT\n       TO_TIMESTAMP(1000000000::DECIMAL, 0) AS \"Scale in seconds\",\n       TO_TIMESTAMP(1000000000000::DECIMAL, 3) AS \"Scale in milliseconds\",\n       TO_TIMESTAMP(1000000000000000::DECIMAL, 6) AS \"Scale in microseconds\",\n       TO_TIMESTAMP(1000000000000000000::DECIMAL, 9) AS \"Scale in nanoseconds\";\"#"
---
Ok(
    [
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| Scale in seconds    | Scale in milliseconds | Scale in microseconds | Scale in nanoseconds |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| 2001-09-09T01:46:40 | 2001-09-09T01:46:40   | 2001-09-09T01:46:40   | 2001-09-09T01:46:40  |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
    ],
)
