crates/core-executor/src/tests/snapshots/query_timestamp_timestamp.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT TO_TIMESTAMP(1000000000::TIMESTAMP)\""
---
Ok(
    [
        "+-----------------------------------------------+",
        "| to_timestamp(to_timestamp(Int64(1000000000))) |",
        "+-----------------------------------------------+",
        "| 2001-09-09T01:46:40                           |",
        "+-----------------------------------------------+",
    ],
)
