crates/core-executor/src/tests/snapshots/query_timestamp_with_timezone_to_timestamp.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT TO_TIMESTAMP(CONVERT_TIMEZONE('UTC', '2024-12-31 10:00:00.000'::TIMESTAMP)) as model_tstamp;\""
---
Ok(
    [
        "+----------------------+",
        "| model_tstamp         |",
        "+----------------------+",
        "| 2024-12-31T10:00:00Z |",
        "+----------------------+",
    ],
)
